--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         text-align: center;
         margin: 0 auto;
         font-size: 40px;
+        background: pink;
+    }
+    h1 {
+        color : red;
     }
 </style>
 <body>
